started refactoring. not finished. squash this commit.