@@ -1,4 +1,5 @@
 package no.nav.security.oidc.configuration;
+
 /*
  * THIS CODE IS PROVIDED *AS IS* BASIS, WITHOUT WARRANTIES OR CONDITIONS
  * OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING WITHOUT LIMITATION
@@ -6,53 +7,76 @@ package no.nav.security.oidc.configuration;
  * PARTICULAR PURPOSE, MERCHANTABILITY OR NON-INFRINGEMENT.
  */
 import java.net.MalformedURLException;
-import java.net.URL;
 
-import no.nav.security.oidc.http.HttpClient;
+import com.nimbusds.jose.util.ResourceRetriever;
+import com.nimbusds.openid.connect.sdk.op.OIDCProviderMetadata;
+
 import no.nav.security.oidc.validation.OIDCTokenValidator;
 
 public class IssuerValidationConfiguration {
-	
+
 	private String name;
-	private IssuerMetaData metaData;
+	private OIDCProviderMetadata metaData;
 	private String acceptedAudience;
 	private String cookieName;
-	private OIDCTokenValidator tokenValidator; 
-	
-	public IssuerValidationConfiguration(String name, IssuerMetaData metaData, String acceptedAudience, HttpClient httpClient) throws MalformedURLException {
+	private OIDCTokenValidator tokenValidator;
+
+	public IssuerValidationConfiguration(String name) {
+		this.name = name;
+	}
+
+	public IssuerValidationConfiguration(String name, OIDCProviderMetadata metaData, String acceptedAudience,
+			ResourceRetriever jwksResourceRetriever) throws MalformedURLException {
 		this.name = name;
 		this.metaData = metaData;
 		this.acceptedAudience = acceptedAudience;
-		this.tokenValidator = new OIDCTokenValidator(metaData.getIssuer(), acceptedAudience, new URL(metaData.getJwks_uri()), httpClient);
+		this.tokenValidator = new OIDCTokenValidator(metaData.getIssuer().toString(), acceptedAudience,
+				metaData.getJWKSetURI().toURL(), jwksResourceRetriever);
 	}
-	public String getName(){
+
+	public String getName() {
 		return name;
 	}
-	public IssuerMetaData getMetaData() {
-		return metaData;
-	}
-	public void setMetaData(IssuerMetaData metaData) {
-		this.metaData = metaData;
-	}
+
 	public String getAcceptedAudience() {
 		return acceptedAudience;
 	}
+
 	public void setAcceptedAudience(String acceptedAudience) {
 		this.acceptedAudience = acceptedAudience;
 	}
-	
+
+	public void setTokenValidator(OIDCTokenValidator tokenValidator) {
+		this.tokenValidator = tokenValidator;
+	}
+
 	public OIDCTokenValidator getTokenValidator() {
 		return this.tokenValidator;
 	}
-	@Override
-	public String toString() {
-		return "IssuerValidationConfiguration [name=" + name + ", metaData=" + metaData + ", acceptedAudience="
-				+ acceptedAudience + ", tokenValidator=" + tokenValidator + "]";
-	}
+
 	public String getCookieName() {
 		return cookieName;
 	}
+
 	public void setCookieName(String cookieName) {
 		this.cookieName = cookieName;
+	}
+
+	public OIDCProviderMetadata getMetaData() {
+		return metaData;
+	}
+
+	public void setMetaData(OIDCProviderMetadata metaData) {
+		this.metaData = metaData;
+	}
+
+	public void setName(String name) {
+		this.name = name;
+	}
+
+	@Override
+	public String toString() {
+		return "IssuerValidationConfiguration [name=" + name + ", metaData=" + metaData + ", acceptedAudience="
+				+ acceptedAudience + ", cookieName=" + cookieName + ", tokenValidator=" + tokenValidator + "]";
 	}
 }
